--- a/resources/web/config.html
+++ b/resources/web/config.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ultimate Backend Configuration</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/config.css">
+    <link rel="stylesheet" href="config.css">
 </head>
 <body>
     <div class="container">
@@ -148,6 +148,6 @@
         </div>
     </div>
 
-    <script src="/config.js"></script>
+    <script src="config.js"></script>
 </body>
 </html>
