Add subscription / Refactor config.js

--- a/resources/web/config.html
+++ b/resources/web/config.html
@@ -74,9 +74,9 @@
                     </div>
 
                     <div id="proxy-container" class="providers-grid">
-                        <div class="empty-state">
-                            <i class="fas fa-network-wired"></i>
-                            <p>Select a provider from the credentials tab to configure proxy settings</p>
+                        <div class="empty-state" id="loading-proxy">
+                            <i class="fas fa-spinner loader"></i>
+                            <p>Loading proxy configurations...</p>
                         </div>
                     </div>
                 </div>
